################################################################################
# UBIncGen
#
# MLIR UB dialect generated includes.
################################################################################

add_custom_target(UBIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
