################################################################################
# UBXIncGen
#
# MLIR UBX dialect generated includes.
################################################################################

add_custom_target(UBXIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
