################################################################################
# UBMLIRUBXIncGen
#
# MLIR UBX dialect generated includes.
################################################################################

add_custom_target(UBMLIRUBXIncGen)

add_subdirectory(Interfaces)
add_subdirectory(IR)
add_subdirectory(Transforms)
